# todo-back/internal/interfaces/http/router/router.go
@@ -5,24 +5,28 @@ import (
 	"net/http"
 
 	"github.com/go-chi/chi/v5"
-	"github.com/go-chi/chi/v5/middleware"
+	chimiddleware "github.com/go-chi/chi/v5/middleware"
 
 	"todo-back/internal/interfaces/http/check"
 	"todo-back/internal/interfaces/http/docs"
 	"todo-back/internal/interfaces/http/handlers"
+	taskhandler "todo-back/internal/interfaces/http/handlers/task"
+	httpmiddleware "todo-back/internal/interfaces/http/middleware"
 )
 
 type Dependencies struct {
-	Log *slog.Logger
+	Log         *slog.Logger
+	TaskUseCase taskhandler.UseCase
 }
 
 func New(deps Dependencies) http.Handler {
 	r := chi.NewRouter()
 
-	r.Use(middleware.RequestID)
-	r.Use(middleware.RealIP)
-	r.Use(middleware.Recoverer)
-	r.Use(middleware.Heartbeat("/ping"))
+	r.Use(chimiddleware.RequestID)
+	r.Use(chimiddleware.RealIP)
+	r.Use(chimiddleware.Recoverer)
+	r.Use(chimiddleware.Heartbeat("/ping"))
+	r.Use(httpmiddleware.CORS)
 
 	r.Get("/check", check.Handler())
 	r.Get("/docs", docs.UI())
@@ -30,6 +34,7 @@ func New(deps Dependencies) http.Handler {
 
 	r.Route("/api/v1", func(r chi.Router) {
 		r.Get("/", handlers.Message("front to back api v1"))
+		r.Route("/tasks", taskhandler.NewHandler(deps.TaskUseCase, deps.Log).Register)
 	})
 
 	r.Route("/srv/v1", func(r chi.Router) {
